--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+fastapi = "^0.115.14"
+pydantic = "^2.11.7"
+fastapi-cli = "^0.0.7"
 
 
 [build-system]
