--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = "^0.115.14"
-pydantic = "^2.11.7"
+pydantic = {extras = ["email"], version = "^2.11.7"}
 fastapi-cli = "^0.0.7"
 
 
