--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 fastapi = "^0.115.14"
 pydantic = {extras = ["email"], version = "^2.11.7"}
 fastapi-cli = "^0.0.7"
+aiosqlite = "^0.21.0"
+sqlmodel = "^0.0.24"
 
 
 [build-system]
