--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,7 @@ sqlmodel = "^0.0.24"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.1"
+httpx = "^0.28.1"
