--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,18 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = "^0.115.14"
-pydantic = {extras = ["email"], version = "^2.11.7"}
-fastapi-cli = "^0.0.7"
-aiosqlite = "^0.21.0"
-sqlmodel = "^0.0.24"
+fastapi = ">=0.115.14,<0.116.0"
+pydantic = {extras = ["email"], version = ">=2.11.7,<3.0.0"}
+fastapi-cli = ">=0.0.7,<0.0.8"
+sqlmodel = ">=0.0.24,<0.0.25"
+aiosqlite = ">=0.21.0,<0.22.0"
+pyjwt = ">=2.10.1,<3.0.0"
+pydantic-settings = ">=2.10.1,<3.0.0"
+bcrypt = ">=4.3.0,<5.0.0"
+python-multipart = ">=0.0.20,<0.0.21"
+pytest = ">=8.0.0,<9.0.0"
+pytest-asyncio = ">=0.24.0,<1.0.0"
+httpx = ">=0.25.0,<1.0.0"
 
 
 [build-system]
